--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -9,12 +9,20 @@
   background: hsl(var(--b2));
 }
 
-* {
-  scroll-behavior: smooth;
-}
-
 body {
   min-height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  margin-bottom: 0.5rem;
+  line-height: 1;
+}
+
+p {
+  margin: 1rem 0;
 }
 
 .btn {
